--- a/Pflichtenheft/config.tex
+++ b/Pflichtenheft/config.tex
@@ -3,7 +3,7 @@
 % Konfiguration
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \newcommand{\titleinfo}{Pflichtenheft}
-\newcommand{\subjectinfo}{Low Power wakeup receiver}
+\newcommand{\subjectinfo}{Low power wakeup receiver}
 \newcommand*{\AuthorOne}{Cédric Renda}
 \newcommand*{\AuthorTwo}{Manuel Tischhauser}
 \newcommand*{\Author}{\AuthorOne, \AuthorTwo}
