--- a/Pflichtenheft/content/intro/einleitung.tex
+++ b/Pflichtenheft/content/intro/einleitung.tex
@@ -1,17 +1,9 @@
 \section{Einleitung}
 \label{sec:intro}
 
-\subsection{Zweck}
-Im vorliegenden Dokument sind die Anforderungen definiert, welche im Projekt \subjectinfo\ umgesetzt werden müssen. 
-Es beschreibt den Auftrag zwischen Auftraggeber und Auftragnehmer. 
-Der Ausdruck Pflichtenheft ist hier im Sinne der IEEE Recommended Practice for Software Requirements Specification. ANSI/IEEE Std 830-1998 verwendet.
-Die dort definierte Requirements Specification beinhaltet sowohl die Benutzeranforderungen (Lastenheft gemäss DIN 69901-5) als auch Realisierungsvorgaben an die Entwicklungsgruppe (Pflichtenheft gemäss DIN 69901-5).
-
-\subsection{Produktüberblick}
-\note{Hier soll ein Überblick gegeben werden über die Teile, welche im Rahmen dieses Projekts entwickelt werden sollen, d.h. eine summarische Beschreibung darüber, welche Funktionalität das Produkt haben, und eventuell auch welche es nicht haben soll. Die zu entwickelnden Teile sollen namentlich erwähnt werden. Ausserdem kann auch erläutert werden, wie das Produkt eingesetzt werden soll.}
-
-\subsection{Definitionen, Akronyme und Abkürzungen}
-\note{(Optional) Define all terms, acronyms, and abbreviations used in this document. This often goes into a separate document in a larger project.}
-
-\subsection{Referenzen}
-Siehe Anhang \ref{anx:ref} auf Seite \pageref{anx:ref} dieses Dokuments.
+Im Gebäudemanagement ist es üblich, Belegungspläne an den Eingängen der Räume anzubringen.
+Oftmals sind diese in Papierformat und müssen bei einer Änderung von Hand gewechselt werden.
+Mit dieser Methode werden kurzfristige Belegungen nicht aufgezeigt.
+Dies könnte man umgehen, wenn man mit Displays arbeitet, die über eine drahtlose Schnittstelle aktualisiert werden können.
+Dabei stellt sich allerdings das Problem, dass man entweder Kabel für die Netzeinspeisung verlegen muss, oder Batterien verwendet, die regelmässig ersetzt werden müssen.
+Im Idealfall entfällt die Speisung komplett.
