--- a/Pflichtenheft/content/title/titel.tex
+++ b/Pflichtenheft/content/title/titel.tex
@@ -14,7 +14,7 @@
    		Projekt: \subjectinfo\\
    		\large
    		\vspace*{\stretch{0.1}}
-   		Version \versioninfo\\
+   		Version\versioninfo\\
    		\vspace*{\stretch{0.5}}
    		\authorinfo \\			
    	\end{flushright}
@@ -22,17 +22,17 @@
    	\newcolumntype{Y}{>{\setlength\hsize{0.2\hsize}\raggedright\arraybackslash}X}
    	\newcolumntype{Z}{>{\setlength\hsize{0.4\hsize}\raggedright\arraybackslash}X}
    	\renewcommand\arraystretch{1.5}
-   	\begin{tabularx}{\linewidth}{|Z|Y|Z|}
+   	\begin{tabularx}{\linewidth}{|X|X|X|}
    		\hline
    		\textbf{Name} & \textbf{Datum} & \textbf{Unterschrift}\\
    		\hline
-   		Hans Mustermann & \printdate{\dateinfo} & \\
+   		Prof. Dr. Heinz Mathis & & \\
    		\hline
-   		& & \\
+   		Selina Malacarne& & \\
    		\hline
-   		& & \\
+   		Cédric Renda& & \\
    		\hline
-   		& & \\
+   		Manuel Tischhauser& & \\
         \hline
    	\end{tabularx}
 \end{center}
@@ -42,7 +42,7 @@
 {
     \footnotesize 
     \begin{flushright}
-        Doc\#: \docNr\linebreak
+        %Doc\#: \docNr\linebreak
         Datum: \dateinfo
     \end{flushright}
 }
