--- a/Pflichtenheft/config.tex
+++ b/Pflichtenheft/config.tex
@@ -10,7 +10,7 @@
 \newcommand{\authorinfo}{\Author}
 \newcommand{\versioninfo}{0.1}
 \newcommand{\docNr}{ABC.0001}
-\newcommand{\dateinfo}{20.09.2019}
+\newcommand{\dateinfo}{\today}
 
 % Notes for SRS completion, uncomment the following command to suppress this output
 \newcommand{\note}[1]{%
