--- a/Pflichtenheft/content/title/titel.tex
+++ b/Pflichtenheft/content/title/titel.tex
@@ -14,7 +14,7 @@
    		Projekt: \subjectinfo\\
    		\large
    		\vspace*{\stretch{0.1}}
-   		Version\versioninfo\\
+   		Version \versioninfo\\
    		\vspace*{\stretch{0.5}}
    		\authorinfo \\			
    	\end{flushright}
@@ -43,7 +43,7 @@
     \footnotesize 
     \begin{flushright}
         %Doc\#: \docNr\linebreak
-        Datum: \dateinfo
+        \dateinfo
     \end{flushright}
 }
 
