--- a/Pflichtenheft/header.tex
+++ b/Pflichtenheft/header.tex
@@ -73,7 +73,8 @@
 \usepackage{trfsigns}
 \usepackage{textcomp}
 
-
+%Querformat
+\usepackage{pdflscape}
 
 \renewcommand{\captionfont}{\scriptsize\slshape}
 	
