section evaluation erstellt

--- a/Dokumentation/header/header.tex
+++ b/Dokumentation/header/header.tex
@@ -1,6 +1,9 @@
 \usepackage[T1]{fontenc}	% ä,ü...
 \usepackage[utf8]{inputenc} % utf-8 Unterstützung
-\usepackage[ngerman]{babel} % Silbentrennung und Rechtschreibung Deutsch
+\usepackage[ngerman, english]{babel} % Silbentrennung und Rechtschreibung Deutsch und Englisch
+
+
+
 \usepackage[{left=1.5cm,right=1.5cm,top=0cm,bottom=0cm}]{geometry} % Seitenränder Titelblatt
 
 
