--- a/Dokumentation/SA.tex
+++ b/Dokumentation/SA.tex
@@ -78,6 +78,7 @@ a4paper]{article}
 	\include{sections/Aufgabenstellung}
 %    \cleardoublepage
 	\include{sections/Einleitung}
+	\include{sections/evaluation}
     \include{sections/Einleitung1}
 	\include{sections/Pflichtenheft}
 	\include{sections/Projektplan}
