--- a/Dokumentation/header/header.tex
+++ b/Dokumentation/header/header.tex
@@ -56,6 +56,10 @@
 \usepackage{varwidth}
 \usepackage{wrapfig}
 
+%eigene Packages
+\usepackage{enumitem}
+\usepackage{ragged2e}
+
 %%%%%%%%%%%%%%%%%%%%%%%
 %% PDF Meta Data
 %%%%%%%%%%%%%%%%%%%%%%%
