--- a/Pflichtenheft/content/auftrag/auftrag.tex
+++ b/Pflichtenheft/content/auftrag/auftrag.tex
@@ -7,3 +7,11 @@ Im Rahmen dieser Semesterarbeit sollen folgende Punkte abgearbeitet werden:
 	\item Vor- und Nachteile bestehender Technologien abwägen und geeignete Hardware wählen.	
 	\item Erstellen eines lauffähigen Prototypen.
 \end{itemize}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.8\textwidth]{./Use-Case-Model.png}
+	\caption{Use-Case Diagramm\label{use-case}}
+\end{figure}
+
+Der Prototyp richtet sich nach dem Use-Case Diagramm in Abbildung \ref{use-case}.
