--- a/Pflichtenheft/content/zeitplan/zeitplan.tex
+++ b/Pflichtenheft/content/zeitplan/zeitplan.tex
@@ -1,10 +1,6 @@
-
 \begin{landscape}
-\section{Zeitplan}	
-	\begin{table}
-		\centering
-		
-	\end{table}	
+	\section{Zeitplan}
+	\begin{minipage}{23cm}
+		\includegraphics[width=23cm]{./Zeitplan.pdf}
+	\end{minipage}	
 \end{landscape}
-
-
