--- a/Pflichtenheft/content/auftrag/auftrag.tex
+++ b/Pflichtenheft/content/auftrag/auftrag.tex
@@ -1,7 +1,8 @@
 \section{Auftrag}
 \label{sec:generalProvision}
 
-Im Rahmen dieser Semesterarbeit sollen folgende Punkte abgearbeitet werden:
+
+Im Rahmen dieser Semesterarbeit soll eine Lösung zur oben beschriebenen Problematik ausgearbeitet werden. Der Fokus liegt auf der Erstellung eines autarken Anzeigesystems welches über eine drahtlose Schnittstelle bedient werden kann. Die folgende Punkte sollen dabei abgearbeitet werden:
 \begin{itemize}
 	\item Recherche bezüglich Schnittstelle und Energy Harvesting.	
 	\item Vor- und Nachteile bestehender Technologien abwägen und geeignete Hardware wählen.	
