--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -113,8 +113,11 @@ HSR Hochschule Für Technik Rapperswil
 
 \input{00-abbreviations/00-abbreviations.tex}
 \input{1-intro/1-intro.tex}
-\input{2-evaluation/2-evaluation.tex}
-
+\input{2-requirements/2-requirements.tex}
+\input{3-theory/3-theory.tex}
+\input{4-development/4-development.tex}
+\input{5-results/5-results.tex}
+\input{6-summary/6-summary.tex}
 
 \appendix
 
