--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -25,6 +25,7 @@
 \usepackage[colorlinks=true]{hyperref}
 \usepackage{array}
 \usepackage{tikz}
+\usepackage{pdfpages}
 \input{common/linsys.tex}
 \makeindex
 \begin{document}
