--- a/Doku/Bericht/4-development/4-development.tex
+++ b/Doku/Bericht/4-development/4-development.tex
@@ -4,7 +4,9 @@
 \input{4-development/overview/overview.tex}
 
 \section{Hardware}
+\input{4-development/hardware/hardware.tex}
+
 
 \section{Software}
-
+\input{4-development/software/software.tex}
 
