--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -31,5 +31,29 @@
 	keywords = {manual}
 }
 
+@manual{stm32,
+	organisation = {STM},
+	title =  {{STM32L4R5xx STM32L4R7xx STM32L4R9xx }},
+	year          =  2018,
+	month         =  04,
+	keywords = {manual}
+}
+
+@manual{nrf,
+	organisation = {Nordic},
+	title =  {{nRF52840 Objective Product Specification v0.5}},
+	year          =  2016,
+	month         =  12,
+	keywords = {manual}
+}
+
+@manual{adp_eval,
+	organisation = {Analog Devices},
+	title =  {{EVAL-ADP5090 User Guide}},
+	year          =  2014,
+	keywords = {manual}
+}
+
+
 
 
