--- a/Doku/Bericht/3-theory/e-paper-display/graphics/e_ink.tex
+++ b/Doku/Bericht/3-theory/e-paper-display/graphics/e_ink.tex
@@ -5,6 +5,11 @@
 \begin{document}
 \begin{tikzpicture}
 
-\draw (0,0) -- (0, 10);
+\draw (0,0) circle (2cm);
+\draw (4.5,0) circle (2cm);
+
+\draw (0,0) -- (25:2);
+
+
 \end{tikzpicture}
 \end{document}
