--- a/Doku/Bericht/3-theory/3-theory.tex
+++ b/Doku/Bericht/3-theory/3-theory.tex
@@ -1,6 +1,7 @@
 \chapter{Theory}
 
-\section{E-paper display}
+\section{Microencapsulated Electrophoretic Displays}
+\input{3-theory/e-paper-display/e-paper-display.tex}
 
 \section{wake up interrupt}
 
