--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -1,6 +1,12 @@
 %% https://de.wikipedia.org/wiki/BibTeX
 
 %%Literatur-------------------------------------------------------------------------------------------------------
+@book{amundson,
+	title =  {{Electrophoretic Displays}},
+	author={Karl Amundson},
+	year={2016},
+	publisher={Springer International Publishing Switzerland}
+}
 
 %%Online-------------------------------------------------------------------------------------------------------
 
@@ -53,6 +59,8 @@
 	year          =  2014,
 	keywords = {manual}
 }
+
+
 
 
 
