--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -27,6 +27,12 @@
 \usepackage{tikz}
 \usepackage{pdfpages}
 
+
+\usepackage{pdflscape}
+
+%figure float
+\usepackage{float}
+
 %bibliography
 \usepackage[hyperref=true,backend=biber,style=ieee,defernumbers=true]{biblatex}
 \addbibresource{references.bib}
@@ -70,7 +76,7 @@
 \vspace*{10pt}
 \begin{flushright}
 {\Huge
-Low Power Wake-Up-Receiver}
+Low Power WakeUp-Receiver}
 
 %\Large{with Rotation, GPS and On-Board-Diagnostics Sensor Data}
 \end{flushright}
@@ -118,12 +124,11 @@ HSR Hochschule Für Technik Rapperswil
 
 \input{00-abbreviations/00-abbreviations.tex}
 \input{1-intro/1-intro.tex}
-\input{2-requirements/2-requirements.tex}
-\input{3-theory/3-theory.tex}
-\input{4-evaluation/4-evaluation.tex}
-\input{5-development/5-development.tex}
-\input{6-results/6-results.tex}
-\input{7-summary/7-summary.tex}
+\input{2-theory/2-theory.tex}
+\input{3-evaluation/3-evaluation.tex}
+\input{4-development/4-development.tex}
+\input{5-results/5-results.tex}
+\input{6-summary/6-summary.tex}
 
 %bibliography
 \chapter*{Sources}
