--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -27,8 +27,10 @@
 \usepackage{tikz}
 \usepackage{pdfpages}
 
-
 \usepackage{pdflscape}
+
+\usepackage{tabularx}
+
 
 %figure float
 \usepackage{float}
