--- a/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
+++ b/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
@@ -8,6 +8,11 @@ But since the developed prototype uses a screen, which uses a microencapsulated 
 	\caption{filler pic\label{theory:capsules}}
 \end{figure}
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.9\textwidth]{2-theory/e-paper-display/graphics/epaper_mikroskop.pdf}
+	\caption{E-paper display under microscope with 250x magnification\label{theory:micro}}
+\end{figure}
 
 
 \cite{amundson}
