--- a/Doku/Bericht/3-evaluation/3-evaluation.tex
+++ b/Doku/Bericht/3-evaluation/3-evaluation.tex
@@ -1,1 +1,49 @@
 \chapter{Evaluation}
+This section lists the pros and cons of available Technologies.
+On this basis was evaluated, which hardware is suitable.
+
+\section{Energy harvesting}
+\begin{tabularx}{\linewidth}{m{3cm}|X|X}
+	\textbf{Technologie}&\textbf{Pro}&\textbf{Contra}\\
+	\hline
+	BLA&
+	\noindent{
+		\begin{itemize}[leftmargin=0.3cm]
+			\item[-] bla
+	\end{itemize}}&
+	\noindent{
+		\begin{itemize}[leftmargin=0.3cm]
+			\item[-] bla
+	\end{itemize}}\\
+	\hline
+\end{tabularx}
+
+
+\section{Wireless interface}
+\begin{tabularx}{\linewidth}{m{3cm}|X|X}
+	\textbf{Technologie}&\textbf{Pro}&\textbf{Contra}\\
+	\hline
+	Visual light communication&
+	\noindent{
+		\begin{itemize}[leftmargin=0.3cm]
+			\item[-] Radiation is proper for any environment
+			\item[-] High data rate (several Gb/s)
+			\item[-] Light for transmission can also be used as energy resource
+	\end{itemize}}&
+	\noindent{
+		\begin{itemize}[leftmargin=0.3cm]
+			\item[-] Only little products are available yet
+			\item[-] Limited usability with existing lightning systems,  additional ethernet cables to lightbulbs may be required
+			\item[-] Direct irradiation is needed
+	\end{itemize}}\\
+	\hline
+	Wake-up radio&
+	\noindent{
+		\begin{itemize}[leftmargin=0.3cm]
+			\item[-] Range typically around 30m, but can be improved with antenna diversity and directional antennas
+	\end{itemize}}&
+	\noindent{
+		\begin{itemize}[leftmargin=0.3cm]
+			\item[-] bla
+	\end{itemize}}\\	
+\end{tabularx}
